Colocando icone na aba do navegador

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai" rel="stylesheet">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>notifica</title>
+    <link rel="icon" href="https://img.icons8.com/color/48/000000/alarm.png">
+    <title>Notificador</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but notifica doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Notificador doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
